Carrière laatste 2 kopjes afgemaakt

--- a/html-css-master/concurrenten.html
+++ b/html-css-master/concurrenten.html
@@ -11,7 +11,7 @@
     <body>
         <main>
             <header>
-                <h1>Concurrenten</h1>
+                <h1 id="hoofdtitel">Concurrenten</h1>
             </header>
             
             <div class= "navigatiebalktop">
