--- a/html-css-master/shop.html
+++ b/html-css-master/shop.html
@@ -11,7 +11,7 @@
     <body id="bodyshop">
         <main>
             <header>
-                <h1>Shop</h1>
+                <h1 id="hoofdtitel">Shop</h1>
             </header>
             
             <div class= "navigatiebalktop">
@@ -24,7 +24,7 @@
                 </ul>
             </div>
 
-            <div class="verticalMenu">
+            <div class="verticalmenushop">
                 <ul>
                     <li><a href="#home">Home</a></li>
                     <li><a href="#news">News</a></li>
