Begin aan prijzen

--- a/html-css-master/index.html
+++ b/html-css-master/index.html
@@ -32,8 +32,9 @@
                 <p class="algemeentekst3">Op deze website kan je heel veel informatie en statistieken over Cristiano vinden, natuurlijk de algemene informatie op deze pagina, maar ook over alle prijzen die hij gewonnen heeft. In totaal heeft hij tot nu toe 80 prijzen, waarvan 33 in teamverband gewonnen. Op de laatste pagina is ook nog een shop te vinden, waar je tegen scherpe prijzen vele artikelen van de nummer 7 kan vinden.</p>
             </article>
         
-            <footer>
+            <footer id="footeralgemeen">
                 <hr/>
+                <br>
                 <p class="smalltext">copyright K. Smit 2019</p>
             </footer>      
 
