--- a/html-css-master/concurrenten.html
+++ b/html-css-master/concurrenten.html
@@ -24,24 +24,44 @@
                     </ul>
                 </div>
 
+            <article>
+                <h2 class="headernatconcur">Nationale concurrenten</h2>
+                <img class="zweefRechts" src="afbeeldingen/nani-h200.jpg"><img class="zweefRechts" src="afbeeldingen/pepe-h200.jpg"><p class="nationaleconcurtekst">Op nationaal gebied heeft Cristiano eigenlijk geen concurrenten. Luís Figo was zijn grootste concurrent, maar zijn carriëre eindigde al in 2006, die vormt geen bedreiging meer de toppositie van Ronaldo. Nani en Pepe zouden nu de eerste bedreiging voor de nummer 7 worden, maar ook deze spelers zijn nog lang niet op het niveau van Ronaldo. Zo heeft Ronaldo 94 goals uit 161 interlands gemaakt en Nani maar 24 goals uit 112 interlands. Verder valt Pepe moeilijk te vergelijken met Ronaldo aangezien hij verdediger is en Ronaldo een aanvallende positie bespeelt. We hoeven dus ook geen extra uitleg te geven over de 2 spelers, aangezien ze toch geen echte concurrenten zijn.</p>
+                <p class="toelichtingenfotos">Foto's van Pepe (links) en Nani (rechts)</p>
 
-                <h2 class="koppenconcurrenten">Nationale concurrenten</h2>
-                <img class="zweefRechts" src="afbeeldingen/pepe-h200.jpg"><p class="nationaleconcurtekst">Op nationaal gebied heeft Cristiano eigenlijk geen concurrenten. Luís Figo was zijn grootste concurrent, maar zijn carriëre eindigde al in 2006, die vormt geen bedreiging meer de toppositie van Ronaldo. Nani en Pepe zouden nu de eerste bedreiging voor de nummer 7 worden, maar ook deze spelers zijn nog lang niet op het niveau van Ronaldo. Zo heeft Ronaldo 94 goals uit 161 interlands gemaakt en Nani maar 24 goals uit 112 interlands. Verder valt Pepe moeilijk te vergelijken met Ronaldo aangezien hij verdediger is en Ronaldo een aanvallende positie bespeelt. We hoeven dus ook geen extra uitleg te geven over de 2 spelers, aangezien ze toch geen echte concurrenten zijn.</p>
-                <p class="toelichtingenfotos">Foto van Pepe</p>
-
-                <h2 class="koppenconcurrenten">Internationale concurrenten</h2>
-                <p class="internationaleconcurtekst">Als we het over concurrenten van Ronaldo hebben, praten we over de mensen die met Ronaldo strijden, en een kans maken, om bepaalde prijzen te winnen, wij nemen de Ballon d'Or als indicator. Deze prijs wordt elk jaar uitgereikt aan de beste voetballer van het jaar. In de afgelopen 3 jaar waren er 4 belangrijke concurrenten, Messi, Neymar, Griezzman en Van Dijk. Deze worden allemaal besproken in het artikel hieronder.</p>
-                <h3 class="headerLinksConc" style="display:inline;">Messi</h3>
-                <h3 class="headerRechtsConc" style="display:inline;">Neymar</h3>
-                <img class="zweefLinks" src="afbeeldingen/messi-h160.jpg">
-                <img class="zweefRechts" src="afbeeldingen/neymar-h160.jpg">
-                <p class="tekstMessi">Lionel Messi is een Argentijnse profvoetballer die sinds 2000 en nu nog steeds bij FC Barcelona speelt. Hij is geboren op 24 juni 1987. Toen de nummer 7 nog in de Spaanse competitie speelde, werd de topscorer altijd Messi of Ronaldo. Sinds Ronaldo naar Italië vertrok, is het elke keer Messi geworden. Hij strijdt al jaren met Ronaldo om de gouden bal. Zo won Ronaldo hem in 2017, maar Messi kreeg hem in 2019. Beide spelers zitten de afgelopen jaren elke keer weer in de top 5.</p><br>
-                <p class="tekstNeymar">Neymar is een Brazilaanse profvoetballer die op dit moment bij Paris Saint-German, in Frankrijk speelt. Hij is geboren op 5 februari 1992. In 2017 werd Neymar 3e in de race voor de gouden bal. Sowieso toen Neymar bij Barcelona speelde van 2013 tot en met 2017 was hij een van de betere spelers van de Spaanse competitie, hij werd zelfs bijna topscorer. 2019 viel tegen voor de Braziliaan, hij kwam niet in de top 10 van de Gouden Bal.</p>
+                <h2 class="headerinterconcur">Internationale concurrenten</h2>
+                <p>Als we het over concurrenten van Ronaldo hebben, praten we over de mensen die met Ronaldo strijden, en een kans maken, om bepaalde prijzen te winnen, wij nemen de Ballon d'Or, de Gouden Bal als indicator. Deze prijs wordt elk jaar uitgereikt aan de beste voetballer van het jaar. In de afgelopen 3 jaar waren er 4 belangrijke concurrenten, Messi, Neymar, Griezzman en Van Dijk. Deze worden allemaal besproken in het artikel hieronder.</p>
+                <h3 class="headerMessi">Messi</h3>
+                <img class="zweefLinks" src="afbeeldingen/messi-h200.jpg">
+                <p>Lionel Messi is een Argentijnse profvoetballer die sinds 2000 en nu nog steeds bij FC Barcelona speelt. Hij is geboren op 24 juni 1987. Toen de nummer 7 nog in de Spaanse competitie speelde, werd de topscorer altijd Messi of Ronaldo. Sinds Ronaldo naar Italië vertrok, is het elke keer Messi geworden. Hij strijdt al jaren met Ronaldo om de gouden bal. Zo won Ronaldo hem in 2017, maar Messi kreeg hem in 2019. Messi heeft in tot nu toe 6 keer de Gouden Bal gewonnen en Ronaldo 5 keer. Beide spelers zitten de afgelopen jaren elke keer weer in de top 5.</p>
+                <h3 class="headerNeymar">Neymar</h3>
+                <img class="zweefRechts" src="afbeeldingen/neymar-h200.jpg">
+                <p>Neymar is een Brazilaanse profvoetballer die op dit moment bij Paris Saint-German, in Frankrijk speelt. Hij is geboren op 5 februari 1992. In 2017 werd Neymar 3e in de race voor de Gouden Bal. Sowieso toen Neymar bij Barcelona speelde van 2013 tot en met 2017 was hij een van de betere spelers van de Spaanse competitie, hij werd zelfs bijna topscorer. 2019 viel tegen voor de Braziliaan, hij kwam niet in de top 10 van de Gouden Bal.</p>
                 
-                <h3 class="headerLinksConc" style="display:inline;">Griezzman</h3>
-                <h3 class="headerRechtsConc" style="display:inline;">Van Dijk</h3>
-                <img class="zweefLinks" src="afbeeldingen/griezmann-h160.jpg">
-                <img class="zweefRechts" src="afbeeldingen/vandijk-h160.jpg">
+                <h3 class="headerGriezzman">Griezzman</h3>
+                <img class="zweefLinks" src="afbeeldingen/griezmann-h200.jpg">
+                <p>Antoine Griezmann is een Franse profvoetballer. Op dit moment speelt hij in de spits van FC Barcelona. Hij is geboren op 21 maart 1991 en draagt rugnummer 17. Griezmann werd 3e in de race voor de Gouden Bal in 2018, maar hij stond maar een paar punten achter Ronaldo. Griezmann is 6 jaar jonger dan Ronaldo, dus hij heeft meer tijd om nog door te groeien. Daarentegen staat wel dat Ronaldo op deze leeftijd meer prijzen heeft gewonnen dan Griezzman.</p>
+                <h3 class="headerVanDijk">Van Dijk</h3>
+                <img class="zweefRechts" src="afbeeldingen/vandijk-h200.jpg">
+                <p>Virgil van Dijk is een opkomende Nederlandse profvoetballer die op dit moment bij Liverpool speelt. Hij is op 8 juli 1991 geboren, in hetzelfde als Griezzman. Van Dijk heeft de afgelopen jaren een aardige sprong gemaakt. Hij behoort nu tot de top van het Nederlandse voetbalelftal. Van Dijk eindigde als 2e in de race voor de Gouden Bal in 2019, Ronaldo eindigde 3e. Toch zijn Virgil en Ronaldo moeilijk te vergelijken, Van Dijk is verdediger en Ronaldo is aanvaller. Het is dus vanzelfsprekend dat Ronaldo meer scoort dan Van Dijk.</p>
+            
+                <h2 class="headercompconcur">Competitie concurrenten</h2>
+                <img class="zweefLinks" src="afbeeldingen/immobile-h180.jpg">In de Italiaanse competitie spelen niet de top spelers, maar er spelen wel zeer getalenteerde mensen. Ondanks hun kwaliteiten zullen de spelers in de Serie A, de Italiaanse competitie, geen bedreiging kopen voor de toppositie van Ronaldo. Maar er zijn wel spelers die het hem knap lastig maken in de competitie. Neem bijvoorbeeld de huidige nummer 1, per 19-12-2019, Ciro Immobile. Hij staat nu ver bovenaan de topscorerslijst met 17 doelpunten, terwijl Ronaldo met 10 doelpunten gedeeld 2e staat. Op internationaal gebied vormen deze spelers dus geen gevaar, maar in de competitie kunnen ze het Ronaldo knap lastig maken. Het is nog maar de vraag of Ronaldo dit seizoen topscorer gaat worden. Ronaldo heeft dus zijn kwaliteiten nog niet 100% kunnen tonen in Italië.
+                <ul style="list-style-type:circle;" class="lijstjeImmobile">
+                    <li><strong>Naam:</strong> Ciro Immobile</li>
+                    <li><strong>Geboortedatum:</strong> 20 februari 1990</li>
+                    <li><strong>Huidige team:</strong> Lazio</li>
+                    <li><strong>Positie:</strong> Spits</li>
+                </ul>  
+
+            </article>
+
+            <footer id="footerconcur">
+                <hr/>
+                <br>
+                <p class="smalltext">copyright K. Smit 2019</p>
+                <br>
+            </footer>  
         </main>
     </body>  
 </html>            
