Verder gewerkt aan prijzen

--- a/html-css-master/prijzen.html
+++ b/html-css-master/prijzen.html
@@ -30,13 +30,44 @@
                 <p>Cristiano Ronaldo heeft vanaf het begin van zijn carriëre tientallen prijzen gewonnen, van wat kleine prijzen, zoals topscorer van de Italiaanse competitie, tot beste voetballer van de wereld! Op deze pagina zullen alle belangrijke prijzen die Ronaldo heeft gewonnen staan, ook staat erbij hoeveel keer hij die prijs heeft gewonnen, in welk seizoen en bij welke club. Alle lijsten zijn per 30 december 2019.</p>
 
             <h2 class="koppenprijzen">Wereldvoetballer: 5x<h2>
-            <img src="afbeeldingen/bekerwereldvoetballer.jpg">
+            <img class="plaatjesprijzen" src="afbeeldingen/bekerwereldvoetballer.jpg">
             <ul style="list-style-type:circle;" class="lijstjesprijzen">
                 <li>2017 - <a href="https://nl.wikipedia.org/wiki/Real_Madrid_CF">Real Madrid</a></li>
                 <li>2016 - <a href="https://nl.wikipedia.org/wiki/Real_Madrid_CF">Real Madrid</a></li>
                 <li>2014 - <a href="https://nl.wikipedia.org/wiki/Real_Madrid_CF">Real Madrid</a></li>
                 <li>2013 - <a href="https://nl.wikipedia.org/wiki/Real_Madrid_CF">Real Madrid</a></li>
                 <li>2008 - <a href="https://nl.wikipedia.org/wiki/Manchester_United_FC">Manchester United</a></li>
+            </ul>  
+
+            <h2 class="koppenprijzen">Europees voetballer van het jaar: 4x<h2>
+            <img class="plaatjesprijzen" src="afbeeldingen/bekereuropeesvoetballer.jpg">
+            <ul style="list-style-type:circle;" class="lijstjesprijzen">
+                <li>2017 - <a href="https://nl.wikipedia.org/wiki/Real_Madrid_CF">Real Madrid</a></li>
+                <li>2016 - <a href="https://nl.wikipedia.org/wiki/Real_Madrid_CF">Real Madrid</a></li>
+                <li>2014 - <a href="https://nl.wikipedia.org/wiki/Real_Madrid_CF">Real Madrid</a></li>
+                <li>2008 - <a href="https://nl.wikipedia.org/wiki/Manchester_United_FC">Manchester United</a></li>
+            </ul>  
+
+            <h2 class="koppenprijzen">Topscorer: 17x<h2>
+            <img class="plaatjesprijzen" src="afbeeldingen/topscorerlogo.jpg">
+            <ul style="list-style-type:circle;" class="lijstjesprijzen">
+                <li>18/19 - <a href="https://nl.wikipedia.org/wiki/Portugal">Portugal</a></li>
+                <li>17/18 - <a href="https://nl.wikipedia.org/wiki/Real_Madrid_CF">Real Madrid</a></li>
+                <li>16/17 - <a href="https://nl.wikipedia.org/wiki/Real_Madrid_CF">Real Madrid</a></li>
+                <li>15/16 - <a href="https://nl.wikipedia.org/wiki/Real_Madrid_CF">Real Madrid</a></li>
+                <li>14/15 - <a href="https://nl.wikipedia.org/wiki/Real_Madrid_CF">Real Madrid</a></li>
+                <li>13/14 - <a href="https://nl.wikipedia.org/wiki/Real_Madrid_CF">Real Madrid</a></li>
+                <li>12/13 - <a href="https://nl.wikipedia.org/wiki/Real_Madrid_CF">Real Madrid</a></li>
+                <li>11/12 - <a href="https://nl.wikipedia.org/wiki/Portugal">Portugal</a></li>
+                <li>10/11 - <a href="https://nl.wikipedia.org/wiki/Real_Madrid_CF">Real Madrid</a></li>
+                <li>07/08 - <a href="https://nl.wikipedia.org/wiki/Manchester_United_FC">Manchester United</a></li>   
+            </ul>  
+
+            <h2 class="koppenprijzen">Speler van het seizoen: 2x<h2>
+            <img class="plaatjesprijzen" src="afbeeldingen/bekereuropeesvoetballer.jpg">
+            <ul style="list-style-type:circle;" class="lijstjesprijzen">
+                <li>18/19 - <a href="https://nl.wikipedia.org/wiki/Juventus_FC">Juventus</a></li>
+                <li>07/08 - <a href="https://nl.wikipedia.org/wiki/Manchester_United_FC">Manchester United</a></li>
             </ul>  
 
             <h2 class="koppenprijzen">Europees voetballer van het jaar: 4x<h2>
@@ -48,6 +79,14 @@
                 <li>2008 - <a href="https://nl.wikipedia.org/wiki/Manchester_United_FC">Manchester United</a></li>
             </ul>  
 
+            <h2 class="koppenprijzen">Europees voetballer van het jaar: 4x<h2>
+            <img src="afbeeldingen/bekereuropeesvoetballer.jpg">
+            <ul style="list-style-type:circle;" class="lijstjesprijzen">
+                <li>2017 - <a href="https://nl.wikipedia.org/wiki/Real_Madrid_CF">Real Madrid</a></li>
+                <li>2016 - <a href="https://nl.wikipedia.org/wiki/Real_Madrid_CF">Real Madrid</a></li>
+                <li>2014 - <a href="https://nl.wikipedia.org/wiki/Real_Madrid_CF">Real Madrid</a></li>
+                <li>2008 - <a href="https://nl.wikipedia.org/wiki/Manchester_United_FC">Manchester United</a></li>
+            </ul>  
 
 
 
