prijzen afgemaakt en gewerkt aan navigatiebalk van shop

--- a/html-css-master/prijzen.html
+++ b/html-css-master/prijzen.html
@@ -37,7 +37,7 @@
                 <li>2014 - <a href="https://nl.wikipedia.org/wiki/Real_Madrid_CF">Real Madrid</a></li>
                 <li>2013 - <a href="https://nl.wikipedia.org/wiki/Real_Madrid_CF">Real Madrid</a></li>
                 <li>2008 - <a href="https://nl.wikipedia.org/wiki/Manchester_United_FC">Manchester United</a></li>
-            </ul>  
+            </ul>
 
             <h2 class="koppenprijzen">Europees voetballer van het jaar: 4x<h2>
             <img class="plaatjesprijzen" src="afbeeldingen/bekereuropeesvoetballer.jpg">
@@ -46,7 +46,7 @@
                 <li>2016 - <a href="https://nl.wikipedia.org/wiki/Real_Madrid_CF">Real Madrid</a></li>
                 <li>2014 - <a href="https://nl.wikipedia.org/wiki/Real_Madrid_CF">Real Madrid</a></li>
                 <li>2008 - <a href="https://nl.wikipedia.org/wiki/Manchester_United_FC">Manchester United</a></li>
-            </ul>  
+            </ul>
 
             <h2 class="koppenprijzen">Topscorer: 17x<h2>
             <img class="plaatjesprijzen" src="afbeeldingen/topscorerlogo.jpg">
@@ -61,37 +61,65 @@
                 <li>11/12 - <a href="https://nl.wikipedia.org/wiki/Portugal">Portugal</a></li>
                 <li>10/11 - <a href="https://nl.wikipedia.org/wiki/Real_Madrid_CF">Real Madrid</a></li>
                 <li>07/08 - <a href="https://nl.wikipedia.org/wiki/Manchester_United_FC">Manchester United</a></li>   
-            </ul>  
+            </ul>
 
             <h2 class="koppenprijzen">Speler van het seizoen: 2x<h2>
             <img class="plaatjesprijzen" src="afbeeldingen/bekereuropeesvoetballer.jpg">
             <ul style="list-style-type:circle;" class="lijstjesprijzen">
                 <li>18/19 - <a href="https://nl.wikipedia.org/wiki/Juventus_FC">Juventus</a></li>
                 <li>07/08 - <a href="https://nl.wikipedia.org/wiki/Manchester_United_FC">Manchester United</a></li>
-            </ul>  
+            </ul>
 
-            <h2 class="koppenprijzen">Europees voetballer van het jaar: 4x<h2>
-            <img src="afbeeldingen/bekereuropeesvoetballer.jpg">
+            <h2 class="koppenprijzen">Winnaar Champions League: 5x<h2>
+            <img class="plaatjesprijzen" src="afbeeldingen/bekerchampionsleague.jpg">
+            <ul style="list-style-type:circle;" class="lijstjesprijzen">
+                <li>17/18 - <a href="https://nl.wikipedia.org/wiki/Real_Madrid_CF">Real Madrid</a></li>
+                <li>16/17 - <a href="https://nl.wikipedia.org/wiki/Real_Madrid_CF">Real Madrid</a></li>
+                <li>15/16 - <a href="https://nl.wikipedia.org/wiki/Real_Madrid_CF">Real Madrid</a></li>
+                <li>13/14 - <a href="https://nl.wikipedia.org/wiki/Real_Madrid_CF">Real Madrid</a></li>
+                <li>07/08 - <a href="https://nl.wikipedia.org/wiki/Manchester_United_FC">Manchester United</a></li>
+            </ul>
+
+            <h2 class="koppenprijzen">Engels kampioen: 3x<h2>
+            <img class="plaatjesprijzen" src="afbeeldingen/bekerengelskampioen.jpg">
+            <ul style="list-style-type:circle;" class="lijstjesprijzen">
+                <li>2007 - <a href="https://nl.wikipedia.org/wiki/Manchester_United_FC">Manchester United</a></li>
+                <li>2008 - <a href="https://nl.wikipedia.org/wiki/Manchester_United_FC">Manchester United</a></li>
+                <li>2009 - <a href="https://nl.wikipedia.org/wiki/Manchester_United_FC">Manchester United</a></li>
+            </ul>
+
+            <h2 class="koppenprijzen">Spaans kampioen: 2x<h2>
+            <img class="plaatjesprijzen" src="afbeeldingen/bekerspaanskampioen.jpg">
+            <ul style="list-style-type:circle;" class="lijstjesprijzen">
+                <li>16/17 - <a href="https://nl.wikipedia.org/wiki/Real_Madrid_CF">Real Madrid</a></li>
+                <li>11/12 - <a href="https://nl.wikipedia.org/wiki/Real_Madrid_CF">Real Madrid</a></li>    
+            </ul>
+
+            <h2 class="koppenprijzen">FIFA Club World Cup winnaar: 4x<h2>
+            <img class="plaatjesprijzen" src="afbeeldingen/bekerfifaclubworld.jpg">
             <ul style="list-style-type:circle;" class="lijstjesprijzen">
                 <li>2017 - <a href="https://nl.wikipedia.org/wiki/Real_Madrid_CF">Real Madrid</a></li>
                 <li>2016 - <a href="https://nl.wikipedia.org/wiki/Real_Madrid_CF">Real Madrid</a></li>
                 <li>2014 - <a href="https://nl.wikipedia.org/wiki/Real_Madrid_CF">Real Madrid</a></li>
                 <li>2008 - <a href="https://nl.wikipedia.org/wiki/Manchester_United_FC">Manchester United</a></li>
-            </ul>  
+            </ul>
 
-            <h2 class="koppenprijzen">Europees voetballer van het jaar: 4x<h2>
-            <img src="afbeeldingen/bekereuropeesvoetballer.jpg">
+            <h2 class="koppenprijzen">FIFA Club World Cup winnaar: 4x<h2>
+            <img class="plaatjesprijzen" src="afbeeldingen/bekernationsleague.jpg">
             <ul style="list-style-type:circle;" class="lijstjesprijzen">
-                <li>2017 - <a href="https://nl.wikipedia.org/wiki/Real_Madrid_CF">Real Madrid</a></li>
-                <li>2016 - <a href="https://nl.wikipedia.org/wiki/Real_Madrid_CF">Real Madrid</a></li>
-                <li>2014 - <a href="https://nl.wikipedia.org/wiki/Real_Madrid_CF">Real Madrid</a></li>
-                <li>2008 - <a href="https://nl.wikipedia.org/wiki/Manchester_United_FC">Manchester United</a></li>
-            </ul>  
+                <li>2019 - <a href="https://nl.wikipedia.org/wiki/Portugal">Portugal</a></li>
+            </ul>
 
-
+            <h2 class="koppenprijzen">UEFA supercup: 3x<h2>
+            <img class="plaatjesprijzen" src="afbeeldingen/UEFAsupercup.jpg">
+            <ul style="list-style-type:circle;" class="lijstjesprijzen">
+                <li>17/18 - <a href="https://nl.wikipedia.org/wiki/Real_Madrid_CF">Real Madrid</a></li>
+                <li>16/17 - <a href="https://nl.wikipedia.org/wiki/Real_Madrid_CF">Real Madrid</a></li>
+                <li>14/15 - <a href="https://nl.wikipedia.org/wiki/Real_Madrid_CF">Real Madrid</a></li>
+            </ul>
 
             </article>
-        
+
             <footer>
                 <hr/>
                 <br>
