--- a/html-css-master/shop.html
+++ b/html-css-master/shop.html
@@ -26,10 +26,10 @@
 
             <div class="verticalmenushop">
                 <ul>
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#news">News</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                    <li><a href="#about">About</a></li>
+                    <li><a href="#shirts">Shirts</a></li>
+                    <li><a href="#broeken">Broeken</a></li>
+                    <li><a href="#schoenen">Schoenen</a></li>
+                    <li><a href="#accessoires">Accessoires</a></li>
                 </ul>
             </div>
 
