Laatste dingen gefixt

--- a/html-css-master/concurrenten.html
+++ b/html-css-master/concurrenten.html
@@ -27,7 +27,7 @@
             <article>
                 <h2 class="headernatconcur">Nationale concurrenten</h2>
                 <img class="zweefRechts" src="afbeeldingen/nani-h200.jpg"><img class="zweefRechts" src="afbeeldingen/pepe-h200.jpg"><p class="nationaleconcurtekst">Op nationaal gebied heeft Cristiano eigenlijk geen concurrenten. Luís Figo was zijn grootste concurrent, maar zijn carriëre eindigde al in 2006, die vormt geen bedreiging meer de toppositie van Ronaldo. Nani en Pepe zouden nu de eerste bedreiging voor de nummer 7 worden, maar ook deze spelers zijn nog lang niet op het niveau van Ronaldo. Zo heeft Ronaldo 94 goals uit 161 interlands gemaakt en Nani maar 24 goals uit 112 interlands. Verder valt Pepe moeilijk te vergelijken met Ronaldo aangezien hij verdediger is en Ronaldo een aanvallende positie bespeelt. We hoeven dus ook geen extra uitleg te geven over de 2 spelers, aangezien ze toch geen echte concurrenten zijn.</p>
-                <p class="toelichtingenfotos">Foto's van Pepe (links) en Nani (rechts)</p>
+                <p class="toelichtingenfotosconcur">Foto's van Pepe (links) en Nani (rechts)</p>
 
                 <h2 class="headerinterconcur">Internationale concurrenten</h2>
                 <p>Als we het over concurrenten van Ronaldo hebben, praten we over de mensen die met Ronaldo strijden, en een kans maken, om bepaalde prijzen te winnen, wij nemen de Ballon d'Or, de Gouden Bal als indicator. Deze prijs wordt elk jaar uitgereikt aan de beste voetballer van het jaar. In de afgelopen 3 jaar waren er 4 belangrijke concurrenten, Messi, Neymar, Griezzman en Van Dijk. Deze worden allemaal besproken in het artikel hieronder.</p>
@@ -59,7 +59,7 @@
             <footer id="footerconcur">
                 <hr/>
                 <br>
-                <p class="smalltext">copyright K. Smit 2019</p>
+                <p class="smalltext">copyright K. Smit 2020</p>
                 <br>
             </footer>  
         </main>
