--- a/html-css-master/shop.html
+++ b/html-css-master/shop.html
@@ -61,7 +61,7 @@
 
             <a name="broeken"></a>
 
-            <h1 class="shopkopbroeken">Broeken</h1>
+            <h1 class="shopkoppen">Broeken</h1>
 
             <div class="shopartikel">
                 <h3 class="koppenartikelen">Ronaldo broek zwart Real Madrid / Adidas: €49.99</h3>
@@ -85,7 +85,7 @@
 
             <a name="schoenen"></a>
 
-            <h1 class="shopkopbroeken">Schoenen</h1>
+            <h1 class="shopkoppen">Schoenen</h1>
 
             <div class="shopartikel">
                 <h3 class="koppenartikelen">Ronaldo voetbalschoenen rood Nike: €119.99 </h3>
@@ -109,32 +109,31 @@
 
             <a name="accessoires"></a>
 
-            <h1 class="shopkopbroeken">Accessoires</h1>
+            <h1 class="shopkoppen">Accessoires</h1>
 
             <div class="shopartikel">
-                <h3 class="koppenartikelen">Ronaldo scheenbeschemers: €29.99</h3>
+                <h3 class="koppenartikelen">Ronaldo scheenbeschemers zwart/rood: €29.99</h3>
                 <img class="plaatjesshoplinks" src="afbeeldingen/ronaldoacc1.jpg"><p class="shopkopen">Kopen</p></img>
             </div>
 
             <div class="shopartikel">
-                <h3 class="koppenartikelen">Ronaldo mok: €19.99</h3>
+                <h3 class="koppenartikelen">Ronaldo Real Madrid mok : €19.99</h3>
                 <img class="plaatjesshoplinks" src="afbeeldingen/ronaldoacc2.jpg"><p class="shopkopen">Kopen</p></img>
             </div>
 
             <div class="shopartikel">
-                <h3 class="koppenartikelen">Ronaldo dekbed: €49.99</h3>
+                <h3 class="koppenartikelen">Ronaldo CR7 dekbed: €49.99</h3>
                 <img class="plaatjesshoplinks" src="afbeeldingen/ronaldoacc3.jpg"><p class="shopkopen">Kopen</p></img>
             </div>
 
             <div class="shopartikel">
-                <h3 class="koppenartikelen">Ronaldo poster: €19.99</h3>
+                <h3 class="koppenartikelen">Ronaldo poster blauw: €19.99</h3>
                 <img class="plaatjesshoplinks" src="afbeeldingen/ronaldoacc4.jpg"><p class="shopkopen">Kopen</p></img>
             </div>
             <br>
 
             <footer>
                 <hr/>
-                <br>
                 <p class="smalltext">copyright K. Smit 2020</p>
                 <br>
             </footer>       
