--- a/html-css-master/index.html
+++ b/html-css-master/index.html
@@ -11,7 +11,7 @@
     <body>
         <main>
             <header>
-                <h1 id="hoofdtitel" class="belangrijk">Algemeen</h1>
+                <h1 id="hoofdtitel" class="belangrijk">Informatie Cristiano Ronaldo</h1>
             </header>
 
                 <div class= "navigatiebalktop">
