--- a/html-css-master/shop.html
+++ b/html-css-master/shop.html
@@ -11,7 +11,7 @@
     <body id="bodyshop">
         <main>
             <header>
-                <h1 id="hoofdtitel">Shop</h1>
+                <h1 id="hoofdtitel">Informatie Cristiano Ronaldo</h1>
             </header>
             
             <div class= "navigatiebalktop">
