--- a/html-css-master/prijzen.html
+++ b/html-css-master/prijzen.html
@@ -11,7 +11,7 @@
     <body>
         <main>
             <header>
-                <h1 id="hoofdtitel">Prijzen</h1>
+                <h1 id="hoofdtitel">Informatie Cristiano Ronaldo</h1>
             </header>
             
             <div class= "navigatiebalktop">
